<resources>
    <string name="app_name">Bank Application</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Frist_Name">Frist Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="User_Name">UserName</string>
    <string name="Email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="transaction">Transfer</string>
    <string name="from_creditcard">From CreditCard Number:</string>
    <string name="from_creditcard_hint">From CreditCard Number</string>
    <string name="to_creditcard_number">To CreditCard Number:</string>
    <string name="to_creditcard_number_hint">To CreditCard Number</string>
    <string name="amount_of_money">Amount Of Money:</string>
    <string name="amount_of_money_hint">Amount Of Money</string>
    <string name="transfer">Transfer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_request">Request</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loan">Loan</string>
    <string name="stop_card">Stop Card</string>
    <string name="delete_account">Delete Account</string>
    <string name="save_button">Save</string>
    <string name="text_name">Name</string>
    <string name="text_job">Job</string>
    <string name="text_salary">Salary</string>
    <string name="number_of_months">Number of months</string>
    <string name="home_button">Home</string>
</resources>