<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pexelspixabay164501"
    tools:context=".Transfers">


    <TextView
        android:id="@+id/text1"
        android:layout_width="290dp"
        android:layout_height="64dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/transaction"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="234dp"
        android:layout_height="43dp"
        android:gravity="center|start"
        android:paddingStart="10sp"
        android:shadowColor="@color/black"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/from_creditcard"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <EditText
        android:id="@+id/from_creditcard_number_id"
        android:layout_width="377dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/from_creditcard_hint"
        android:inputType="number"
        android:paddingStart="10sp"
        android:shadowColor="@color/white"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="228dp"
        android:layout_height="41dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:paddingStart="10sp"
        android:shadowColor="@color/black"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/to_creditcard_number"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_creditcard_number_id" />

    <EditText
        android:id="@+id/to_creditcard_number_id"
        android:layout_width="377dp"
        android:layout_height="65dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/to_creditcard_number_hint"
        android:inputType="number"
        android:paddingStart="10sp"
        android:shadowColor="@color/white"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/amount_of_money"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_creditcard_number_id" />

    <EditText
        android:id="@+id/amount_of_money_id"
        android:layout_width="377dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/amount_of_money_hint"
        android:inputType="number"
        android:paddingStart="10sp"
        android:shadowColor="@color/white"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/transfer_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/transfer"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_of_money_id"
        app:layout_constraintVertical_bias="0.364" />

</androidx.constraintlayout.widget.ConstraintLayout>