<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"

        android:background="@drawable/pexelspixabay164501"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="270dp"
            android:layout_height="54dp"

            android:layout_marginTop="28dp"
            android:fontFamily="serif"
            android:gravity="center_vertical"
            android:shadowColor="@color/black"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="Creat Your Account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/Frist_Name"
            android:inputType="textPersonName"
            android:shadowColor="@color/white"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Last_Name"
            android:inputType="textPersonName"
            android:shadowColor="@color/white"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname" />

        <EditText
            android:id="@+id/username"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/User_Name"
            android:inputType="textPersonName"
            android:shadowColor="@color/white"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/white"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:shadowColor="@color/white"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email" />

        <EditText
            android:id="@+id/Address"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:shadowColor="@color/white"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:shadowColor="@color/white"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Address" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"

            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"

            android:shadowColor="@color/white"

            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <Button
            android:id="@+id/registerbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            app:backgroundTint="@null"
            android:shadowColor="@color/black"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>