<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.96"
    android:background="@drawable/pexelspixabay164501"
    tools:context=".Loan">


    <TextView
        android:id="@+id/numOFmonthsId"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:paddingLeft="10dp"
        android:paddingTop="10sp"
        android:shadowColor="@color/black"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/number_of_months"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/monthsAnsId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryAnsId" />

    <TextView
        android:id="@+id/salaryId"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:shadowColor="@color/black"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/text_salary"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/salaryAnsId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobAnswerId" />

    <TextView
        android:id="@+id/jobId"
        android:layout_width="105dp"
        android:layout_height="29dp"
        android:gravity="start"
        android:paddingLeft="10dp"
        android:shadowColor="@color/black"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/text_job"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jobAnswerId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personNameID" />

    <TextView
        android:id="@+id/nameID"
        android:layout_width="103dp"
        android:layout_height="30dp"
        android:paddingLeft="10dp"
        android:shadowColor="@color/black"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/text_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/personNameID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveId"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:background="@drawable/button_bg"
        android:rotationY="10"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/save_button"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthsAnsId" />

    <EditText
        android:id="@+id/salaryAnsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0.0"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/numOFmonthsId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryId" />

    <EditText
        android:id="@+id/jobAnswerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/salaryId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobId" />

    <EditText
        android:id="@+id/personNameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/jobId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameID" />

    <EditText
        android:id="@+id/monthsAnsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/saveId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOFmonthsId" />

</androidx.constraintlayout.widget.ConstraintLayout>